# speedy_utils

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODING_STYLE.md  IMPROVEMENTS.md  README.md  build.sh  bumpversion.sh  copilot-instructions.md  debug_imemoize.py  debug_imemoize_flow.py  debug_real_imemoize.py  examples_improved_error_tracing.py  llm_ray_results.json  pyproject.toml  pyrightconfig.json  report.md  requirements.txt  ruff.toml  setup-skill.sh  setup-speedy-utils.sh  setup.cfg  setup.py  simple_test_imemoize.py  test.ipynb  test.py  test_imemoize.py  test_imemoize_final.py  test_imemoize_persistence.py  test_import_time.py  test_key_renaming.py  test_logger_detailed.py  test_multiworker_jsonl.py  test_s3.py
.agents/PRs/: pcat-vscode-command-resolution.md
.agents/plans/: pcat-vscode-command-resolution.md
.codex/skills/: speedy-utils-core
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/prompts/: improveParallelErrorHandling.prompt.md
.github/skills/caching-utilities/: SKILL.md
.github/skills/dataset-processing-multiprocessing/: CONFIG_REFERENCE.md  SKILL.md  example_tokenize_pack.py
.github/skills/edit-llm-inference-style/: SKILL.md
.github/skills/io-utilities/: SKILL.md
.github/skills/llm-integration/: SKILL.md
.github/skills/make-vscode-happy/: SKILL.md
.github/skills/multi-threading-processing/: SKILL.md
.github/skills/ray-distributed-computing/: SKILL.md
.github/skills/skill-creation/: SKILL.md
.github/skills/speedy-utils-core/: SKILL.md
.github/skills/vision-utilities/: SKILL.md
.github/workflows/: deploy.yml  publish.yml
debug/: debug_generate_response.py  debug_n_param.py  debug_n_structure.py  integration_test.py  multi_thread.py  test_decode_api.py  test_endpoints.py  test_generate.py  test_generate_endpoint.py  test_qwen3_generate.md  test_qwen3_generate.py
docs/: GENERATE_QUICKREF.md  IMPLEMENTATION.md  MIGRATION_THINKING.md  PR_LIBRARY_ERROR_HANDLING_REFACTOR_PLAN.md  QUICKSTART.md  SKILL.md  TDD.md  TOKENIZATION.md  TOKENIZATION_IMPLEMENTATION.md  zero_copy_sharing.md
documents/llm_utils_recipe/: README.md
examples/: demo_parallel.py  generate_example.py  llm_public_api_example.ipynb  llm_ray_example.py  model_specific_thinking_example.py  pytorch_large_model.py  qwen3llm_usage_demo.ipynb  shared_kwargs_example.py  temperature_range_example.py  test_parallel_gpu.py  test_share_ray.py  tokenization_example.py  vision_utils_example.py
experiments/: test_read_image.py
experiments/exp1/: dockerfile  run_in_docker.sh
notebooks/: README.ipynb  demo_multi_process.py  parallel_gpu_pool.ipynb  ray_tutorial.ipynb  test.ipynb  test_multi_thread.ipynb
notebooks/llm_utils/: llm_as_a_judge.ipynb
scripts/: bug.py  bug_simple.py  debug_import_time.py  debug_lm.py  debug_multi_process.py  deploy.sh  imports.sh  install_hooks.sh  lazy_import.py  test.py  test_both_backends.py  test_error_handling.py  test_import_time_vision.py  test_locals.py  test_ray_locals.py  test_ray_mp.py
speedy/: utils.py
speedy_utils/: __init__.py  all.py  multi_worker.py
speedy_utils/common/: clock.py  dataclass_parser.py  function_decorator.py  generic.py  report_manager.py  utils_cache.py  utils_io.py  utils_misc.py  utils_print.py
speedy_utils/multi_worker/: _handle_inputs.py  process.py  thread.py
src/datasets/: convert_to_arrow.py
src/datasets_utils/: __init__.py  convert_to_arrow.py  viz_chat.py
src/datasets_utils/pcat/: _shared.py  cli.py  hf_dataset.py  jsonl.py  serve.py
src/llm_utils/: __init__.py  _traceback.py  chat_format.py  group_messages.py  llm_ray.py  lm.py  load_chat_dataset.py  utils.py
src/llm_utils/chat_format/: __init__.py  display.py  transform.py  utils.py
src/llm_utils/lm/: __init__.py  alm.py  async_lm.py  base_lm.py  base_prompt_builder.py  chat_html.py  chat_session.py  llm.py  llm_as_a_judge.py  llm_qwen3.py  llm_signature.py  llm_task.py  lm.py  lm_base.py  lm_inspect.py  lm_json.py  mixins.py  openai_memoize.py  pydantic_lm.py  signature.py  sync_lm.py  text_lm.py  utils.py
src/llm_utils/scripts/: README.md  example_vllm_client.py  fast_vllm.py  requirements_example.txt  serve_script.sh  sp_chat.py  vllm_load_balancer.py  vllm_serve.py
src/llm_utils/system_prompted_assistant/: __init__.py  wrong_student_conversation_to_answer.py
src/llm_utils/vector_cache/: __init__.py  cli.py  core.py  types.py  utils.py
src/speedy_utils/: __imports.py  __init__.py  all.py
src/speedy_utils/common/: clock.py  dataclass_parser.py  exceptions.py  function_decorator.py  logger.py  notebook_utils.py  patcher.py  report_manager.py  utils_cache.py  utils_error.py  utils_io.py  utils_misc.py  utils_print.py
src/speedy_utils/multi_worker/: __init__.py  _handle_inputs.py  _mp_backends.py  _mp_progress.py  _mp_spawn.py  (+10 more)
src/vision_utils/: README.md  __init__.py  io.py  io_utils.py  plot.py
tests/: import_all.py  import_time_report.py  integration_test.py  sample_objects.py  test.py  test_common_examples.py  test_debug_lm.py  test_identify.py  test_import_time.py  test_load_jsonl.py  test_logger.py  test_logger_format.py  test_memoize.py  test_memoize_typing.py  test_mp_no_main_guard.py  test_mpython.py  test_multi_process.py  test_multi_process_thread.py  test_multi_thread.py  test_multithread_error_trace.py  test_parallel.py  test_pcat.py  test_prefetch_large_model.py  test_process.py  test_process_update.py  test_pytorch_sharing.py  test_ray_optional_dependency.py  test_shared_kwargs.py  test_thread.py  test_threads.py  test_tokenization.py  test_utils_io.py  test_utils_print.py  test_viz_chat.py
tests/common/: test_utils_print.py
tests/llm_utils/: test_llm_call_contract.py  test_llm_helpers.py  test_llm_mixins.py  test_llm_signature.py  test_llm_wait_for_endpoint.py  test_oai_lm.py  test_openai_memoize_completion_cache.py  test_openai_proxy_localhost.py  test_public_api.py  test_sp_chat.py
tools/: check_syntax.py  uv_test.sh
vscode-pcat/: .gitignore  .vscodeignore  README.md  package.json  tsconfig.json
vscode-pcat/src/: extension.ts
(+16 files in other folders)
