[project]
name = "speedy-utils"
version = "1.1.32"
description = "Fast and easy-to-use package for data science"
authors = [{ name = "AnhVTH", email = "anhvth.226@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "requests",
    "xxhash",
    "loguru",
    "fastcore",
    "debugpy",
    "ipywidgets",
    "jupyterlab",
    "ipdb",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "tabulate",
    "pydantic",
    "tqdm",
    "cachetools",
    "ruff",
    "bump2version",
    "json-repair",
    "fastprogress",
    "freezegun",
    "packaging",
    "openai",
    "ray",
    "aiohttp",
    "pytest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/anhvth/speedy"
Repository = "https://github.com/anhvth/speedy"

[project.optional-dependencies]
ray = ["ray>=2.49.1; python_version >= '3.9'"]

[project.scripts]
mpython = "speedy_utils.scripts.mpython:main"
svllm = "llm_utils.scripts.vllm_serve:main"
svllm-lb = "llm_utils.scripts.vllm_load_balancer:run_load_balancer"
openapi_client_codegen = "speedy_utils.scripts.openapi_client_codegen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speedy_utils", "src/llm_utils", "src/vision_utils"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
exclude = [
    "**/*.ipynb",
    "notebooks/**/*.ipynb",
    "legacy",
    "**/__pycache__",
    "**/.cache",
    "**/.ruff_cache",
    "**/.pytest_cache",
    "**/.ipynb_checkpoints",
    "**/.venv",
    "**/.vscode",
    "**/*.egg-info",
    "**/*.lock",
    "Pipfile.lock",
    "package-lock.json",
    "yarn.lock",
    "unsloth_compiled_cache",
    "unsloth_training_checkpoints",
]
target-version = "py310"
unsafe-fixes = true # allow deletions Ruff marks unsafe
[tool.ruff.lint]
ignore = [
    "E401", # multiple imports on one line
    "E402", # module level import not at top of file
    "E501", # line too long
    "F401", # unused import
    "F403", # wildcard import
    "F405", # name may be undefined, from wildcard import
    "F841", # local variable assigned but never used
    "E722", # do not use bare except
    "E731", # do not assign a lambda expression, use a def
    "E741", # ambiguous variable name
    "E902", # io error
]
unfixable = ["E401", "E402", "E501", "F401", "F403"]
extend-select = ["F"] # keep all pyflakes rules


[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
docstring-code-format = true
